Fix timer alignment

--- a/app/Resources/scss/_gameWindow.scss
+++ b/app/Resources/scss/_gameWindow.scss
@@ -13,7 +13,8 @@
 }
 
 .timer {
-  vertical-align: middle;
+  padding-top: 4px;
+  vertical-align: top;
   height:32px;
   line-height: 32px;
   float: left;
@@ -30,7 +31,7 @@
   border-radius: 20px;
   margin-right: 10px;
   position: relative;
-
+  vertical-align: top;
   &:before{
     display: block;
     content: '';
@@ -54,10 +55,11 @@
 
 .timer-content{
   display: inline-block;
-  vertical-align: middle;
+  vertical-align: top;
 }
 
 .question-count {
+  vertical-align: top;
   float: right;
 }
 
@@ -124,6 +126,7 @@
   left:0;
   background: rgba(#ffffff,0.9);
   z-index:3;
+  display: none;
 }
 
 .game-starting-overlay--counting{
@@ -136,6 +139,8 @@
   font-size: 280px;
   animation: counter_fade 5s;
   animation-iteration-count: infinite;
+
+
 }
 
 @keyframes counter_fade {
